@@ -1,3 +1,10 @@
+2003-01-13  James Henstridge  <james@daa.com.au>
+
+	* src/font-view.c (create_text_pixmap): refactor so that it
+	creates a pixmap big enough to display everything.
+	(main): make the window resizable, and add font preview to a
+	scrolled window.
+
 2003-01-12  Miloslav Trmac  <mitr@volny.cz>
 
 	* configure.in (ALL_LINGUAS): Added "cs" (Czech).
